WebCore:

2009-01-22  Eric Roman  <eroman@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=20806
        Send referrer for history navigations.

        Test: http/tests/navigation/back-send-referrer.html

        Consolidates HistoryItem::rssFeedReferrer and HistoryItem::formReferrer into a single HistoryItem::referrer property.

        * history/HistoryItem.cpp:
        (WebCore::HistoryItem::HistoryItem):
        (WebCore::HistoryItem::referrer):
        (WebCore::HistoryItem::setReferrer):
        (WebCore::HistoryItem::formReferrer):
        (WebCore::HistoryItem::rssFeedReferrer):
        (WebCore::HistoryItem::setRSSFeedReferrer):
        (WebCore::HistoryItem::setFormInfoFromRequest):
        * history/HistoryItem.h:
        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::loadItem):

WebKit/win:

2009-01-22  Eric Roman  <eroman@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=20806
        Deprecate RSSFeedReferrer() and setRSSFeedReferrer().

        * WebHistoryItem.cpp:
        (WebHistoryItem::RSSFeedReferrer):
        (WebHistoryItem::setRSSFeedReferrer):

WebKit/mac:

2009-01-22  Eric Roman  <eroman@chromium.og>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=20806
        Deprecate RSSFeedReferrer() and setRSSFeedReferrer().

        * History/WebHistoryItem.mm:
        (-[WebHistoryItem RSSFeedReferrer]):
        (-[WebHistoryItem setRSSFeedReferrer:]):

LayoutTests:

2009-01-22  Eric Roman  <eroman@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=20806
        "Referer" header not sent for history navigation.

        * http/tests/navigation/back-send-referrer-expected.txt: Added.
        * http/tests/navigation/back-send-referrer.html: Added.
        * http/tests/navigation/resources/back-send-referrer-helper.php: Added.

Canonical link: https://commits.webkit.org/32320@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40132 268f45cc-cd09-0410-ab3c-d52691b4dbfc