WebCore/history/HistoryItem.h
@@ -91,13 +91,12 @@ public:
     const String& parent() const;
     KURL url() const;
     KURL originalURL() const;
+    const String& referrer() const;
     const String& target() const;
     bool isTargetItem() const;
     
     FormData* formData();
     String formContentType() const;
-    String formReferrer() const;
-    String rssFeedReferrer() const;
     
     int visitCount() const;
     bool lastVisitWasFailure() const { return m_lastVisitWasFailure; }
@@ -115,6 +114,7 @@ public:
     void setURL(const KURL&);
     void setURLString(const String&);
     void setOriginalURLString(const String&);
+    void setReferrer(const String&);
     void setTarget(const String&);
     void setParent(const String&);
     void setTitle(const String&);
@@ -122,7 +122,7 @@ public:
     
     void setFormInfoFromRequest(const ResourceRequest&);
 
-    void setRSSFeedReferrer(const String&);
+
     void setVisitCount(int);
     void setLastVisitWasFailure(bool wasFailure) { m_lastVisitWasFailure = wasFailure; }
     void setLastVisitWasHTTPNonGet(bool wasNotGet) { m_lastVisitWasHTTPNonGet = wasNotGet; }
@@ -171,6 +171,7 @@ private:
 
     String m_urlString;
     String m_originalURLString;
+    String m_referrer;
     String m_target;
     String m_parent;
     String m_title;
@@ -192,10 +193,6 @@ private:
     // info used to repost form data
     RefPtr<FormData> m_formData;
     String m_formContentType;
-    String m_formReferrer;
-    
-    // info used to support RSS feeds
-    String m_rssFeedReferrer;
 
     // PageCache controls these fields.
     HistoryItem* m_next;
